<resources>
    <string name="app_name">Swapi Client</string>
    <string name="star_wars_api">STARWARS DB</string>
    <string name="display_label">Display Name</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="action_clear_data">Clear Data</string>
    <string name="bookmarked_details_tag">bookmarked_details</string>
    <string name="search_swapi_title">Search SWAPI</string>

    <!-- fragment_details_films -->
    <string name="title_label">Title: </string>
    <string name="episode_id_label">Episode ID: </string>
    <string name="director_label">Director(s):</string>
    <string name="producer_label">Producer(s):</string>
    <string name="poster_discription">poster_discription</string>
    <string name="release_date_label">Release Date:</string>
    <string name="species_label">Species:</string>
    <string name="starships_label">Starships:</string>
    <string name="vehicles_label">Vehicles:</string>
    <string name="planets_label">Planets:</string>
    <string name="characters_label">Characters:</string>
    <string name="opening_crawl_label">Opening Crawl</string>

    <!-- fragment_details_people -->
    <string name="name_label">Name: </string>
    <string name="birth_date_label">Date of Birth:</string>
    <string name="eye_colour_label">Eye Colour:</string>
    <string name="height_label">Height:</string>
    <string name="mass_label">Mass:</string>
    <string name="skin_colour_label">Skin Colour:</string>
    <string name="homeworld_label">Homeworld:</string>
    <string name="films_label">Films:</string>
    <string name="gender_label">Gender:</string>
    <string name="hair_colour_label">Hair Colour:</string>

    <!-- fragment_details_planets -->
    <string name="diamter_label">Diamter:</string>
    <string name="rotation_period_label">Rotation Period:</string>
    <string name="orbital_period_label">Orbital Period</string>
    <string name="gravity_label">Gravity:</string>
    <string name="population_label">Population:</string>
    <string name="surface_water_label">Surface Water:</string>
    <string name="terrain_label">Terrain:</string>
    <string name="climate_label">Climate:</string>
    <string name="residents_label">Residents:</string>

    <!-- fragment_details_species -->
    <string name="classification_label">Classification:</string>
    <string name="designation_label">Designation:</string>
    <string name="average_height_label">Average Height:</string>
    <string name="average_lifespan_label">Average Lifespan:</string>
    <string name="eye_colours_label">Eye Colours:</string>
    <string name="language_label">Language:</string>
    <string name="hair_colours_label">Hair colours:</string>
    <string name="skin_colours_label">Skin Colours:</string>
    <string name="people_label">People:</string>

    <!-- fragment_details_starships -->
    <string name="model_label">Model:</string>
    <string name="starship_class_label">Starship Class:</string>
    <string name="manufacturer_label">Manufacturer:</string>
    <string name="cost_in_credits_label">Cost In Credits:</string>
    <string name="length_label">Length:</string>
    <string name="crew_label">Crew:</string>
    <string name="passengers_label">Passengers:</string>
    <string name="max_atmospheric_speed_label">Max Atmospheric Speed</string>
    <string name="hyperdrive_rating_label">Hyperdrive Rating:</string>
    <string name="mglt_label">MGLT:</string>
    <string name="cargo_capacity_label">Cargo Capacity:</string>
    <string name="consumables_label">Consumables:</string>
    <string name="pilots_label">Pilots</string>

    <!-- fragment_details_starships -->
    <string name="vehicle_class_label">Vehicle Class:</string>

    <!-- facebook strings -->
    <string name="facebook_app_id">514356039005244</string>
    <string name="fb_login_protocol_scheme">fb514356039005244</string>
    <string name="action_share_facebook">Share your thoughts on Facebook</string>

</resources>
