<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_cache"
        android:onClick="onClearCacheButtonClicked"
        android:orderInCategory="100"
        android:title="@string/action_clear_cache"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_data"
        android:onClick="onClearDataButtonClicked"
        android:orderInCategory="101"
        android:title="@string/action_clear_data"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_facebook"
        android:onClick="onFacebookShareClicked"
        android:orderInCategory="102"
        android:title="@string/action_share_facebook"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search_swapi_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

</menu>